--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 highlighter: rouge
 permalink: /blog/:year/:month/:day/:title/
 environment: prod
-url: "http://gregorygundersen.com"  # Sitemap base URL.
+domain: simonjunyou.li.github.io
+url: https://simonjunyou.li.github.io  # Sitemap base URL.
+repository: SimonJunyouLi/simonjunyou.li.github.io
 plugins:
   - jekyll-scholar
   - jekyll-sitemap
