--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 highlighter: rouge
 permalink: /blog/:year/:month/:day/:title/
 environment: prod
-# domain: simonjunyou.li.github.io
-url: https://simonjunyou.li.github.io  # Sitemap base URL.
-repository: SimonJunyouLi/simonjunyou.li.github.io
+domain: dhrumilp15.github.io
+url: https://dhrumilp15.github.io  # Sitemap base URL.
+repository: dhrumilp15/dhrumilp15.github.io
 plugins:
   - jekyll-scholar
   - jekyll-sitemap
