--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 highlighter: rouge
 permalink: /blog/:year/:month/:day/:title/
 environment: prod
-domain: dhrumilp15.github.io
-url: https://dhrumilp15.github.io  # Sitemap base URL.
-repository: dhrumilp15/dhrumilp15.github.io
+domain: SimonJunyouLi.github.io
+url: https://SimonJunyouLi.github.io  # Sitemap base URL.
+repository: SimonJunyouLi/SimonJunyouLi.github.io
 plugins:
   - jekyll-scholar
   - jekyll-sitemap
